--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  background: #23252c;
+  font-family: Inter, sans-serif;
+}
+
+.container {
+  width: 400px;
+  background: #1a1b21;
+  border-radius: 10px;
+  margin: 50px auto;
+  overflow: hidden;
+}
+
+.joshua-photo {
+  width: 100%;
+}
+
+main {
+  text-align: center;
+  padding: 20px 50px 20px 50px;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 20px;
+  color: #f3bf99;
+  font-weight: normal;
+  padding: 5px 0 10px 0;
+}
+
+h4 {
+  font-size: 15px;
+  font-weight: normal;
+  padding-bottom: 15px;
+}
+
+.email-btn {
+  width: 100%;
+  color: #374151;
+  background: #ffffff;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.email-btn > img {
+  width: 16px;
+}
+
+.content {
+  text-align: left;
+  margin: 30px 0;
+}
+
+h2 {
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+p {
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+
+p:last-child {
+  padding-bottom: 0;
+}
+
+footer {
+  background: #161619;
+  border-radius: 0 0 10px 10px;
+  padding: 20px 60px;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+}
+
+footer > a > img {
+  width: 30px;
+  height: 30px;
+  background-color: #918e9b;
+  padding: 3px;
 }
